kubernetes/istio/gateway-backstage.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: backstage-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: backstage-tls
      hosts:
        - "portal.*"
