kubernetes/istio/authorization-policy-backstage.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-backstage
  namespace: backstage
spec:
  selector:
    matchLabels:
      app: backstage
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces: ["istio-system"]
      to:
        - operation:
            methods: ["GET", "POST", "PUT", "DELETE"]
            paths: ["/api/*", "/catalog/*", "/create/*", "/docs/*"]
